test/corpus/parser-parity.txt
==================
Generic impl and annotated bindings
==================

impl(T) Show for Box(T) {
  show: fn(value) {
    let next: Box(Array(T)) = {item: [value.item]};
    let name: Int = 1 else { fail!("unreachable"); };
    Show.show(next)
  },
};

---

(source_file
  (newline)
  (module_body
    (module_binding
      (impl_binding
        (type_parameters
          (type_parameter
            (identifier)))
        (spaces)
        (contract
          (contract_expr
            (identifier)))
        (spaces)
        (spaces)
        (contract
          (contract_expr
            (identifier)
            (contract_argument
              (contract
                (contract_expr
                  (identifier))))))
        (spaces)
        (newline)
        (spaces)
        (impl_member
          (identifier)
          (spaces)
          (primary
            (closure
              (parameters
                (parameter
                  (identifier)))
              (spaces)
              (block
                (newline)
                (spaces)
                (block_body
                  (let_binding
                    (spaces)
                    (identifier)
                    (spaces)
                    (call_expr
                      (primary
                        (variable_expr
                          (identifier)))
                      (arguments
                        (call_expr
                          (primary
                            (variable_expr
                              (identifier)))
                          (arguments
                            (primary
                              (variable_expr
                                (identifier)))))))
                    (spaces)
                    (spaces)
                    (primary
                      (dict_expr
                        (dict_item
                          (dict_field
                            (identifier)
                            (spaces)
                            (primary
                              (array_expr
                                (array_item
                                  (dot_postfix_expr
                                    (primary
                                      (variable_expr
                                        (identifier)))
                                    (projection_suffix
                                      (identifier)))))))))))
                  (newline)
                  (spaces)
                  (let_else_binding
                    (spaces)
                    (identifier)
                    (spaces)
                    (primary
                      (variable_expr
                        (identifier)))
                    (spaces)
                    (spaces)
                    (primary
                      (int_expr))
                    (spaces)
                    (spaces)
                    (block
                      (spaces)
                      (block_body
                        (expression_statement
                          (primary
                            (named_intrinsic
                              (identifier)
                              (primary
                                (string_expr
                                  (string_literal
                                    (quote_start)
                                    (string_text)
                                    (quote_end))))))))
                      (spaces)))
                  (newline)
                  (spaces)
                  (call_expr
                    (dot_postfix_expr
                      (primary
                        (variable_expr
                          (identifier)))
                      (projection_suffix
                        (identifier)))
                    (arguments
                      (primary
                        (variable_expr
                          (identifier))))))
                (newline)
                (spaces)))))
        (newline))))
  (newline))

==================
Module syntax retained for semantic diagnostics
==================

let (a, b) = (1, 2);
let value: Float = 1.25e-3;
pub let other = 1E+2;
value

---

(source_file
  (newline)
  (module_body
    (module_binding
      (let_pattern_binding
        (spaces)
        (tuple_pattern
          (identifier_pattern
            (identifier))
          (spaces)
          (identifier_pattern
            (identifier)))
        (spaces)
        (spaces)
        (primary
          (paren_expr
            (array_item
              (primary
                (int_expr)))
            (spaces)
            (array_item
              (primary
                (int_expr)))))))
    (newline)
    (module_binding
      (let_binding
        (spaces)
        (identifier)
        (spaces)
        (primary
          (variable_expr
            (identifier)))
        (spaces)
        (spaces)
        (primary
          (float_expr))))
    (newline)
    (module_binding
      (let_binding
        (visibility)
        (spaces)
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (primary
          (float_expr))))
    (newline)
    (primary
      (variable_expr
        (identifier))))
  (newline))

==================
Exponent patterns and nested declarations
==================

def f = fn(x) {
  trait Show { show: Fn(Self) -> String };
  impl Show for Int { show: fn(value) { "int" } };
  match x { 1e2 => 1, 1.5e-2 => 2, _ => 0 }
};

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (primary
          (closure
            (parameters
              (parameter
                (identifier)))
            (spaces)
            (block
              (newline)
              (spaces)
              (block_body
                (trait_binding
                  (spaces)
                  (identifier)
                  (spaces)
                  (spaces)
                  (trait_member
                    (identifier)
                    (spaces)
                    (contract
                      (function_contract
                        (contract
                          (contract_expr
                            (identifier)))
                        (spaces)
                        (spaces)
                        (contract
                          (contract_expr
                            (identifier))))))
                  (spaces))
                (newline)
                (spaces)
                (impl_binding
                  (spaces)
                  (contract
                    (contract_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (contract
                    (contract_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (impl_member
                    (identifier)
                    (spaces)
                    (primary
                      (closure
                        (parameters
                          (parameter
                            (identifier)))
                        (spaces)
                        (block
                          (spaces)
                          (block_body
                            (primary
                              (string_expr
                                (string_literal
                                  (quote_start)
                                  (string_text)
                                  (quote_end)))))
                          (spaces)))))
                  (spaces))
                (newline)
                (spaces)
                (primary
                  (match_expr
                    (spaces)
                    (primary
                      (variable_expr
                        (identifier)))
                    (spaces)
                    (spaces)
                    (match_arm
                      (float_pattern)
                      (spaces)
                      (spaces)
                      (primary
                        (int_expr)))
                    (spaces)
                    (match_arm
                      (float_pattern)
                      (spaces)
                      (spaces)
                      (primary
                        (int_expr)))
                    (spaces)
                    (match_arm
                      (identifier_pattern
                        (placeholder))
                      (spaces)
                      (spaces)
                      (primary
                        (int_expr)))
                    (spaces))))
              (newline)))))))
  (newline))
