test/corpus/raw-strings.txt
==================
Raw string followed immediately by a comment
==================

def value = r#"ok"## comment
;

---

(source_file
  (module_body
    (module_binding
      (def_binding
        (identifier)
        (primary
          (string_expr
            (string_literal
              (raw_string))))
        (comment)))))

==================
Maximum raw string delimiter
==================

def value = r###############################################################################################################################################################################################################################################################"ok"###############################################################################################################################################################################################################################################################;

---

(source_file
  (module_body
    (module_binding
      (def_binding
        (identifier)
        (primary
          (string_expr
            (string_literal
              (raw_string))))))))
