test/corpus/structure.txt
==================
Function contracts associate to the right
==================

def curry: Fn(Int) -> Fn(String) -> Bool = fn(x) { fn(y) { True } };

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (type_scheme
          (contract
            (function_contract
              (contract
                (contract_expr
                  (identifier)))
              (spaces)
              (spaces)
              (contract
                (function_contract
                  (contract
                    (contract_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (contract
                    (contract_expr
                      (identifier))))))))
        (spaces)
        (spaces)
        (primary
          (closure
            (parameters
              (parameter
                (identifier)))
            (spaces)
            (block
              (spaces)
              (block_body
                (primary
                  (closure
                    (parameters
                      (parameter
                        (identifier)))
                    (spaces)
                    (block
                      (spaces)
                      (block_body
                        (primary
                          (variable_expr
                            (identifier))))
                      (spaces)))))
              (spaces)))))))
  (newline))

==================
Patterns, bindings, and postfix ordering
==================

def f = fn(input) {
  let plain = input;
  let typed: Int = input;
  let Some(x) = input else { return 0; };
  match input {
    Result.Ok((left, right)) if left > 0 => f(left).value[0]?,
    _ => 0,
  }
};

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (primary
          (closure
            (parameters
              (parameter
                (identifier)))
            (spaces)
            (block
              (newline)
              (spaces)
              (block_body
                (let_binding
                  (spaces)
                  (identifier)
                  (spaces)
                  (spaces)
                  (primary
                    (variable_expr
                      (identifier))))
                (newline)
                (spaces)
                (let_binding
                  (spaces)
                  (identifier)
                  (spaces)
                  (primary
                    (variable_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (primary
                    (variable_expr
                      (identifier))))
                (newline)
                (spaces)
                (let_else_binding
                  (spaces)
                  (constructor_pattern
                    (identifier)
                    (identifier_pattern
                      (identifier)))
                  (spaces)
                  (spaces)
                  (primary
                    (variable_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (block
                    (spaces)
                    (block_body
                      (primary
                        (return_expr
                          (spaces)
                          (primary
                            (int_expr)))))
                    (spaces)))
                (newline)
                (spaces)
                (primary
                  (match_expr
                    (spaces)
                    (primary
                      (variable_expr
                        (identifier)))
                    (spaces)
                    (newline)
                    (spaces)
                    (match_arm
                      (constructor_pattern
                        (identifier)
                        (identifier)
                        (tuple_pattern
                          (identifier_pattern
                            (identifier))
                          (spaces)
                          (identifier_pattern
                            (identifier))))
                      (spaces)
                      (spaces)
                      (binary_expr
                        (primary
                          (variable_expr
                            (identifier)))
                        (spaces)
                        (spaces)
                        (primary
                          (int_expr)))
                      (spaces)
                      (spaces)
                      (propagate_expr
                        (index_expr
                          (dot_postfix_expr
                            (call_expr
                              (primary
                                (variable_expr
                                  (identifier)))
                              (arguments
                                (primary
                                  (variable_expr
                                    (identifier)))))
                            (projection_suffix
                              (identifier)))
                          (primary
                            (int_expr)))))
                    (newline)
                    (spaces)
                    (match_arm
                      (identifier_pattern
                        (placeholder))
                      (spaces)
                      (spaces)
                      (primary
                        (int_expr)))
                    (newline)
                    (spaces))))
              (newline)))))))
  (newline))

==================
Interpolation preserves nested syntax
==================

def text = `before \{fn(x) { {value: r#"}"#} }.type} after`;

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (primary
          (concat_string
            (concat_fragment)
            (interpolation
              (dot_postfix_expr
                (primary
                  (closure
                    (parameters
                      (parameter
                        (identifier)))
                    (spaces)
                    (block
                      (spaces)
                      (block_body
                        (primary
                          (dict_expr
                            (dict_item
                              (dict_field
                                (identifier)
                                (spaces)
                                (primary
                                  (string_expr
                                    (string_literal
                                      (raw_string
                                        (raw_start)
                                        (raw_text)
                                        (raw_end))))))))))
                      (spaces))))
                (metadata_suffix)))
            (concat_fragment))))))
  (newline))
