test/corpus/whitespace-escape.txt
==================
Whitespace escape consumes spaces tabs and newline together
==================
"a\ 	
   b"
---
(source_file
  (module_body
    (primary
      (string_expr
        (string_literal
          (quote_start)
          (string_text)
          (escape_sequence)
          (string_text)
          (quote_end))))))

==================
Unicode whitespace belongs to the escape
==================
"a\  b"
---
(source_file
  (module_body
    (primary
      (string_expr
        (string_literal
          (quote_start)
          (string_text)
          (escape_sequence)
          (string_text)
          (quote_end))))))
